--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -120,15 +120,18 @@
             }
             .edit {
                 @include flexbox;
-                @include align-items(center);
-                float: right;
+                @include align-items(flex-end);
+                @include flex-direction(column);
+                @include justify-content(center);
                 @media screen and (max-width: $screen-xs-max) {
-                    @include justify-content(center);
+                    @include align-items(center);
                     float: none;
                 }
                 .btn-whitered {
                     text-transform: none;
                     font-weight: $light;
+                    margin-bottom: 5px;
+                    margin-top: 5px;
                 }
             }
         }
@@ -171,9 +174,6 @@
                     vertical-align: middle;
                     margin-top: -2px;
                     border-radius: 1px;
-                }
-                &:nth-child(2) {
-                    line-height: 25px;
                 }
             }
         }
@@ -622,23 +622,29 @@
             }
         }
         div.calendarPanel {
-            overflow: auto;
+            // overflow: auto;
             width: 100%;
             margin-bottom: 10px;
+            @include flexbox;
+            @include flex-direction(column);
+            @include align-items(flex-start);
+            padding-left: 20px;
             a {
-                @extend .col-xs-3;
+                // @extend .col-xs-3;
                 text-align: center;
                 display: inline-block;
                 font-size: 1.3em;
-                font-weight: bold;
+                font-weight: $light;
                 left: 10px;
                 &:before {
                     content: " ";
-                    position: absolute;
+                    // position: absolute;
+                    display: inline-block;
                     width: 20px;
                     height: 20px;
-                    display: block;
+                    // display: block;
                     left: -10px;
+                    margin-right: 10px;
                 }
             }
             a:first-child {
