--- a/public/scss/partials/_footer.scss
+++ b/public/scss/partials/_footer.scss
@@ -125,6 +125,10 @@ footer {
 		margin-left: auto;
 		margin-right: auto;
 	}
+	.heap {
+		position: absolute;
+		right: 0;
+	}
 }
 footer.mobile {
 	padding-left: 10px;
