--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10092,13 +10092,15 @@ input[type="checkbox"].checkbox-disabled:not(:checked) + span:after, input[type=
     background-size: auto;
     width: 20%;
     height: 20%;
-    display: -webkit-flexbox;
-    display: -ms-flexbox;
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-flex-align: center;
+    -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
+    -moz-align-items: center;
     align-items: center;
     text-align: center; }
   .hairfies .single-hairfie .price {
@@ -10964,6 +10966,9 @@ footer {
     position: relative;
     margin-left: auto;
     margin-right: auto; }
+  footer .heap {
+    position: absolute;
+    right: 0; }
 
 footer.mobile {
   padding-left: 10px;
@@ -12698,6 +12703,10 @@ section.home-search .home-search-mobile {
     -webkit-align-items: center;
     align-items: center;
     text-align: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
     justify-content: center; }
     #content.search .sidebar .btn-around:before {
       content: ' ';
@@ -13236,8 +13245,16 @@ section.home-search .home-search-mobile {
       margin-left: auto;
       margin-right: auto;
       margin-top: 10px;
-      justify-content: center;
+      display: -webkit-inline-box;
+      display: -webkit-inline-flex;
+      display: -moz-inline-flex;
+      display: -ms-inline-flexbox;
       display: inline-flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      -moz-justify-content: center;
+      justify-content: center;
       width: inherit;
       font-size: 1.3em; }
       @media screen and (max-width: 767px) {
@@ -13832,13 +13849,15 @@ section.home-search .home-search-mobile {
         background-repeat: no-repeat;
         width: 14%;
         height: 14%;
-        display: -webkit-flexbox;
-        display: -ms-flexbox;
+        display: -webkit-box;
         display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
         display: flex;
-        -webkit-flex-align: center;
+        -webkit-box-align: center;
         -ms-flex-align: center;
         -webkit-align-items: center;
+        -moz-align-items: center;
         align-items: center;
         text-align: center; }
         .hairfie-singleView .single-view #carousel-hairfie .pricetag .price {
