--- a/public/scss/partials/_page-hairfie.scss
+++ b/public/scss/partials/_page-hairfie.scss
@@ -134,14 +134,8 @@
                 background-repeat: no-repeat;
                 width: 14%;
                 height: 14%;
-                display: -webkit-flexbox;
-                display: -ms-flexbox;
-                display: -webkit-flex;
-                display: flex;
-                -webkit-flex-align: center;
-                -ms-flex-align: center;
-                -webkit-align-items: center;
-                align-items: center;
+                @include flexbox;
+                @include align-items(center);
                 text-align: center;
                 .price {
                     color: white;
