--- a/public/components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_forms.scss
+++ b/public/components/bootstrap-sass-official/assets/stylesheets/bootstrap/mixins/_forms.scss
@@ -23,8 +23,8 @@
     @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
     &:focus {
       border-color: darken($border-color, 10%);
-      $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
-      @include box-shadow($shadow);
+      //$shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
+      // @include box-shadow($shadow);
     }
   }
   // Set validation states also for addons
