--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -624,6 +624,7 @@
         .legend {
             padding-top: 20px;
             padding-left: 15px;
+            padding-right: 15px;
             h3 {
                 letter-spacing: 0;
                 font-size: 1.6em;
@@ -633,6 +634,13 @@
                 letter-spacing: 0;
                 font-size: 1.2em;
                 font-weight: $light;
+            }
+            .btn-red {
+                @media screen and (max-width: $screen-xs-max) {
+                    width: 100%;
+                    border-radius: 2px;
+                    margin-bottom: 10px;
+                }
             }
         }
         input[type="text"] {
