--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -192,6 +192,9 @@
                     letter-spacing: 0;
                     @media screen and (max-width: $screen-xs-max) {
                         margin-left: 15px;
+                        &.dateTitle {
+                            display: none;
+                        }
                     }
                 }
                 td {
