--- a/public/scss/partials/_page-resa.scss
+++ b/public/scss/partials/_page-resa.scss
@@ -313,6 +313,8 @@
                     height: 50px;
                     width: 300px;
                 }
+            }
+            .form-group:not(.has-error) {
                 input[name="userEmail"], 
                 input[name="userFirstName"],
                 input[name="userLastName"],
@@ -332,7 +334,7 @@
                 .form-group {
                     margin-bottom: 0;
                 }
-                .form-group:nth-child(2) {
+                .gender-radio > .form-group {
                     margin-right: 120px;
                 }
                 .connect-bloc {
